# medical-conversation

./: .gitignore  README.md  pyproject.toml
medical_conversations/: __main__.py  conversation.wow  conversation2json.py  medical_conversations.py
