[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-conversations"
version = "0.1.0"
description = "A tool to collect information from medical conversation transcripts using the wowool SDK"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["medical", "conversations", "transcripts", "wowool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "wowool-sdk>=3.1.6",
    "wowool-english"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
medical-conversations = "medical_conversations.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medical_conversations*"]

[tool.black]
line-length = 88
target-version = ["py313", "py314"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
